<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.kapp.rxabin.kuadrilapp.CreateEventFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvIcon"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="4dp"
                                android:text="@string/typeEvent" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:onClick="typeSelect"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvEventType"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="- - - -"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                                <ImageView
                                    android:id="@+id/imageView"
                                    android:layout_width="match_parent"
                                    android:layout_height="80dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ico_restaurant" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:id="@+id/layoutDate"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1">

                                <TextView
                                    android:id="@+id/tvTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/title" />

                                <EditText
                                    android:id="@+id/etTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ems="10"
                                    android:inputType="textPersonName" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:layout_below="@id/etTitle"
                                    android:onClick="setDate">

                                    <TextView
                                        android:id="@+id/textView3"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_alignBaseline="@+id/etTitle"
                                        android:layout_alignBottom="@+id/etTitle"
                                        android:layout_alignParentStart="true"
                                        android:layout_weight="1"
                                        android:text="Data" />

                                    <TextView
                                        android:id="@+id/tvDate"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"

                                        android:layout_alignParentTop="true"
                                        android:layout_weight="1"
                                        android:text="@string/selectDate"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                                    <TextView
                                        android:id="@+id/tvTime"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                                </LinearLayout>

                            </RelativeLayout>


                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/desc" />

                        <EditText
                            android:id="@+id/etDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location" />

                        <EditText
                            android:id="@+id/etLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/button2"
                                android:layout_alignBottom="@+id/button2"
                                android:layout_alignParentStart="true"
                                android:layout_weight="1"
                                android:text="Gonbidatuak" />

                            <Button
                                android:id="@+id/button2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true"
                                android:layout_weight="1"
                                android:text="Button" />
                        </RelativeLayout>

                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />


                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_create_event"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:text="@string/save" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>
